test/test.txt
In file included from inc/Display.hpp:5:0,
                 from src/Display.cpp:1:
src/Display.cpp: In function ‘void Display::check_for_close()’:
src/Display.cpp:65:50: error: return-statement with a value, in function returning 'void' [-fpermissive]
     glfwGetKey(window.get(), GLFW_KEY_ESCAPE) == GLFW_PRESS;
                                                  ^
In file included from /usr/include/c++/7.1.1/memory:80:0,
                 from src/Display.cpp:3:
/usr/include/c++/7.1.1/bits/unique_ptr.h: In instantiation of ‘typename std::_MakeUniq<_Tp>::__single_object std::make_unique(_Args&& ...) [with _Tp = GLFWwindow; _Args = {GLFWwindow*}; typename std::_MakeUniq<_Tp>::__single_object = std::unique_ptr<GLFWwindow>]’:
src/Display.cpp:27:72:   required from here
/usr/include/c++/7.1.1/bits/unique_ptr.h:825:30: error: invalid use of incomplete type ‘struct GLFWwindow’
     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from inc/Display.hpp:5:0,
                 from src/Display.cpp:1:
/usr/include/GLFW/glfw3.h:789:16: note: forward declaration of ‘struct GLFWwindow’
 typedef struct GLFWwindow GLFWwindow;
                ^~~~~~~~~~
In file included from /usr/include/c++/7.1.1/memory:80:0,
                 from src/Display.cpp:3:
/usr/include/c++/7.1.1/bits/unique_ptr.h: In instantiation of ‘void std::default_delete<_Tp>::operator()(_Tp*) const [with _Tp = GLFWwindow]’:
/usr/include/c++/7.1.1/bits/unique_ptr.h:268:17:   required from ‘std::unique_ptr<_Tp, _Dp>::~unique_ptr() [with _Tp = GLFWwindow; _Dp = std::default_delete<GLFWwindow>]’
src/Display.cpp:15:30:   required from here
/usr/include/c++/7.1.1/bits/unique_ptr.h:76:22: error: invalid application of ‘sizeof’ to incomplete type ‘GLFWwindow’
  static_assert(sizeof(_Tp)>0,
                      ^
make: *** [Makefile:53: obj/Display.o] Error 1
